--- a/week2/index.html
+++ b/week2/index.html
@@ -6,6 +6,11 @@
     <title>Week 1</title>
   </head>
   <body>
+    <!-- nav links -->
+    <a href="index.html">Home</a>
+    <a href="outdex.html">Table Page</a>
+
+
     <h1>My Favorite Animals</h1>
 
     <h3>Armadillo</h3>
