--- a/week3/index.html
+++ b/week3/index.html
@@ -21,18 +21,26 @@
 
     <!-- forms -->
     <form action="index.html" method="get">
+      
 
       <div>
         <label for="favoriteSnack">Favorite Snack:</label>
-        <input type="text" name="favoriteSnack" id="favoriteSnack" 
-        placeholder="Peeps" required
+        <input
+          type="text"
+          name="favoriteSnack"
+          id="favoriteSnack"
+          placeholder="Peeps"
+          required
         />
       </div>
 
       <div>
         <label for="leastFavoriteSnack">Least Favorite Snack:</label>
-        <input type="text" name="leastFavoriteSnack" id="leastFavoriteSnack" 
-        value="Harry Potter JellyBeans"
+        <input
+          type="text"
+          name="leastFavoriteSnack"
+          id="leastFavoriteSnack"
+          value="Harry Potter JellyBeans"
         />
       </div>
 
@@ -43,11 +51,10 @@
 
       <div>
         <label for="snackColorMood">Snack Color Mood:</label>
-        <input type="color" name="snackColorMood" id="snackColorMood">
+        <input type="color" name="snackColorMood" id="snackColorMood" />
       </div>
 
-      <input type="submit" value="Submit Snacks">
-
+      <input type="submit" value="Submit Snacks" />
     </form>
   </body>
 </html>
