--- a/week3/moreforms.html
+++ b/week3/moreforms.html
@@ -18,6 +18,74 @@
     </nav>
 
     <h1>Containers and Forms</h1>
+    <div>
+      <input
+        type="checkbox"
+        name="soulContract"
+        id="soulContract"
+        checked
+        disabled
+        value="signed"
+      />
+      <label for="soulContract">Sign away your soul</label>
+    </div>
 
+    <div>
+      <input
+        type="radio"
+        name="lengthContract"
+        id="lengthContract1"
+        value="1"
+      />
+      <label for="lengthContract1">1 Year</label>
+
+      <input
+        type="radio"
+        name="lengthContract"
+        id="lengthContract2"
+        value="2"
+      />
+      <label for="lengthContract2">2 Years</label>
+
+      <input
+        type="radio"
+        name="lengthContract"
+        id="lengthContract50"
+        checked
+        value="50"
+      />
+      <label for="lengthContract50">50 Years</label>
+    </div>
+
+    <fieldset>
+      <legend>Personal Info</legend>
+      <div>
+        <label for="fullname">Fullname:</label>
+        <input
+          type="text"
+          name="fullname"
+          id="fullname"
+          required
+          list="commonNames"
+        />
+
+        <datalist id="commonNames">
+          <option value="Scappy">Scappy</option>
+          <option value="Meowth">Meowth</option>
+          <option value="Human">Human</option>
+        </datalist>
+      </div>
+
+      <select name="title" id="title">
+        <option value="Necromancer">Necromancer</option>
+        <option value="Jester">Jester</option>
+        <option value="Barbarian">Barbarian</option>
+        <option value="Janitor">Janitor</option>
+      </select>
+    </fieldset>
+
+    <div>
+      <input type="submit" value="E-Sign " />
+    </div>
   </body>
 </html>
