--- a/homework-2/index.html
+++ b/homework-2/index.html
@@ -14,39 +14,40 @@
         <a href="about.html">About</a>
       </nav>
     </header>
+    <div class="title"><h1>The Martians Are Real and Fluffy</h1>
+    <p>Written by Ollie Tabooger</p></div>
+    
 
-    <h1>My Blog Page</h1>
+    <h3>New Species Discovered</h3>
+    <div class="par1">
+      <section>  <p>
+      New life was discovered on Mars just ten hours ago. NASA - despite serious budget cuts - was successful in creating an artificial intelligence mining rover to the planet. This rover - The Floofer Detector - found an undiscovered cave entrance on the surface. The Floofer Detector scanned the entrance and found an unexpected heat signal that it followed. What it did net was unprecedanted. The AI Rover went into the cave and took itself apart to fit into the 2 foot wide opening. It left any non-vital protective pieces outside the cave opening and entered. When it got to a wider opening in the dark space, it spun in circles, thouroughly dizzying the scientists wathching the streamed footogae. When the Floofer Detector stopped, there was something in the camera view that scientists had never seen and didn't know what t omake of it. They saw a Martian.
+      </p></section>
+      <section><img src="https://th.bing.com/th/id/OIP.K8E-yyJWMdAuNAcrQrWAggHaHa?w=192&h=191&c=7&r=0&o=5&pid=1.7" alt="Creepy fluffy alien staring with tennis ball shaped eyes into cameras soul"></section>
+      
+    </div>
+    <h4>What We Know About the Floofs</h4>
 
-    <h3>Armadillo</h3>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae,
-      accusantium! Porro ipsum repellat placeat at omnis? Expedita commodi animi
-      doloremque.
-    </p>
-    <ul>
+    <div class="li1">
+      <ul>
       <li>They have skeletons</li>
+      <li>They are all fluffy</li>
       <li>They are either alive or dead</li>
-      <li>Considered pests</li>
-      <li>Wanted dead or away</li>
-      <li>Bounty: Peace of mind</li>
+      <li>MultiColoful</li>
+      <li>Did not attack floofer detector</li>
+      <li>Different facial structures depending on age</li>
     </ul>
+    <img src="https://th.bing.com/th/id/OIP.95UCyqiO24EZmtrIPLEU6AHaEv?w=282&h=180&c=7&r=0&o=5&pid=1.7" alt="A space rover looking out at the horizon of an apic space galaxy background">
+  </div>
+   
 
     <!-- Windows: ctrl + / to comment -->
     <section>
-      <h3>Giraffe</h3>
-
-      <h4>Colors</h4>
-      <ol>
-        <li>Yellow</li>
-        <li>Brown</li>
-      </ol>
-
-      <h4>Description</h4>
-      <p>
-        These <b>ferocious</b> creatures stalk throughout the night. If you ever
-        find yourself face-to-face with one <u>do not run</u>;
-        <em>you'll never make it</em>.
-      </p>
+   
     </section>
+    <footer>
+      Pulished April 1, 2025 &copy; That Joke Blog Inc. Authored by Ollie Tabooger
+
+    </footer>
   </body>
 </html>
