--- a/homework-2/index.html
+++ b/homework-2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog About Whatever</title>
     <link href="styles.css" rel="stylesheet" />
+    <link rel="icon" href="https://th.bing.com/th/id/R.63d6c1e596cad1eb30d259321c330dea?rik=J5BpUvQBAqT2gQ&pid=ImgRaw&r=0" type="image/x-icon">
   </head>
   <body>
     <!-- nav links -->
@@ -40,7 +41,21 @@
     <img src="https://th.bing.com/th/id/OIP.95UCyqiO24EZmtrIPLEU6AHaEv?w=282&h=180&c=7&r=0&o=5&pid=1.7" alt="A space rover looking out at the horizon of an apic space galaxy background">
   </div>
    
+  <h4>What Comes Next?</h4>
 
+    <div class="sect3">
+    <p>
+      Obviously, there is only one possible conclusion for what comes next for our world. Floofy aliens are going to take over our biggest cities and the avengers will have to take them down. The fight will be close, lots of people will get really close to dying at least twice and think their mission has failed... but it wont and they dont. All will be fine, the Floofers will not destroy all life on Earth the same way they once did to Mars and live deep within the tectonic plates of Earth's crust. The Floofers never actually existed and this publication was all an April Fools joke to give people a laugh and get us lots of views.
+    </p>
+    <img src="https://th.bing.com/th/id/R.6d31a21e63895889d757ef3ebc025b30?rik=HVfp8%2fYSACEIhQ&pid=ImgRaw&r=0" alt="Dystopian futuristic city being taken over by alien overlords">
+  </div>
+
+  <div class="sect4">
+    <p>
+      If you are interested in supporting the work we do here, please see our <a href="about.html">About Page</a> for more information on how to contact us and sign your soul away.
+    </p>
+  
+  </div>
     <!-- Windows: ctrl + / to comment -->
     <section>
    
