--- a/homework-2/index.html
+++ b/homework-2/index.html
@@ -16,7 +16,8 @@
       </nav>
     </header>
     <div class="title"><h1>The Martians Are Real and Fluffy</h1>
-    <p>Written by Ollie Tabooger</p></div>
+    <p><b>by Ollie Tabooger</b>  <br>Published April 1, 2025</p>
+  </div>
     
 
     <h3>New Species Discovered</h3>
