--- a/homework-3/scores.html
+++ b/homework-3/scores.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instrument Lessons</title>
-    <script src="js/lessons.js" defer></script>
+    <title>Test Scores</title>
+    <script src="js/scores.js" defer></script>
 </head>
 <body>
     <nav>
@@ -14,8 +14,10 @@
             <li><a href="gallery.html">Image Gallery</a></li>
         </ul>
     </nav>
-    <h1>Instrument Lessons</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde laborum vel repellat quam illo eaque veniam dolorum ullam laudantium et.</p>
-    <ul id="instrument-list"></ul>
+    <h1>Test Scores</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, sunt?</p>
+    <ul id="score-list"></ul>
+    <h4>Average Score</h4>
+    <p id="average-score"></p>
 </body>
 </html>
