--- a/homework-3/gallery.html
+++ b/homework-3/gallery.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instrument Lessons</title>
-    <script src="js/lessons.js" defer></script>
+    <title>Image Gallery</title>
+    <script src="js/gallery.js" defer></script>
 </head>
 <body>
     <nav>
@@ -14,8 +14,8 @@
             <li><a href="gallery.html">Image Gallery</a></li>
         </ul>
     </nav>
-    <h1>Instrument Lessons</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde laborum vel repellat quam illo eaque veniam dolorum ullam laudantium et.</p>
-    <ul id="instrument-list"></ul>
+    <h1>Image Gallery</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis minima magni illum unde iusto doloribus nam, praesentium fugit maxime eaque!</p>
+    <section id="gallery-section"></section>
 </body>
 </html>
