--- a/midterm/catalog.html
+++ b/midterm/catalog.html
@@ -19,7 +19,7 @@
     </nav>
     
         <h1>Discover the Unexpected: Our Product Portfolio.</h1>
-        <section id="catalog-section">
+        <section id="catalog-section" class="catSec">
             <ul>
 
             </ul>
